fixed overflowing banner, added gradient on hover for hero image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,9 +42,9 @@ header nav ul li a {
 
 
   .banner-img {
-    width: 100%;
-    margin: 0px 0px 20px 0px;
-    vertical-align: top;
+    background-image: url("../images/headbackground.png");
+    background-size: cover;
+    height: 200px;
     position: relative;
   }
  
@@ -57,7 +57,7 @@ header nav ul li a {
     background-image: url("../images/reeltoreeltape.jpeg");
     background-repeat: no-repeat;
     background-size: 100%;
-    height: 500px;
+    height: 600px;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -71,7 +71,7 @@ header nav ul li a {
     background-image: linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.1)),url("../images/reeltoreeltape.jpeg");
     background-repeat: no-repeat;
     background-size: 100%;
-    height: 500px;
+    height: 600px;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -110,6 +110,27 @@ header nav ul li a {
 }
 
  #about-me {
-  color: #070707;
+  color: #946565;
 }
 
+.projects {
+padding: 50px 50px 50px 50px;
+}
+
+.projects-left {
+    color: #fce138;
+    float: left;
+    margin: 0 auto 30px auto;
+    width: 300px;
+    border: 3px solid #657883;
+    padding: 100px;
+  }
+
+  .projects-right {
+    color: #fce138;
+    float: right;
+    margin: 0 auto 30px auto;
+    width: 300px;
+    border: 3px solid #657883;
+    padding: 100px;
+  }
